assets/css/styles.css
@import url('https://fonts.googleapis.com/css2?family=Rowdies:wght@300&display=swap');

* {
  margin: 0;
  padding: 0;
}

html {
  overflow-y: scroll;
}

h1, h2, h3, h4, h5, h6 {
  margin: 8px 0;
  padding-top: 20px;
  font-family: 'Rowdies', cursive;
}

p {
  font-family: Arial, Helvetica, sans-serif;
  font-size: 15pt;
  margin: 0;
  line-height: 1.5;
}

.spacer {
  flex: 1;
}

.post-content, .blog-content {
  padding: 0 16px;
  /* overflow: hidden; */
}

.blog-content {
  margin: 90px auto 32px;
  max-width: 860px;
}

.blog-content p {
  padding-bottom: 20px;
  padding-top: 10px;
}

.post-content {
  margin: 0px auto 0px auto;
  max-width: 1200px;
  text-align: center;
}

a, a:link {
  color: #078b00;
  text-decoration: none;
}

.anc-hover:hover, a:hover {
  color: #0dc200;
  text-decoration: none;
}

.align-page-controls {
  margin-left: 0;
  margin-right: 0;
  align-items: center;
  text-align: center;
}

.posts-pagination-table {
  width: 100%;
}

.posts-container-shadow {
  box-shadow: whitesmoke 0px 10px 20px;
}

.ng-cloak {
  display: none !important;
}

/* NAV */

.navbar-dark .nav-link {
  min-width: 90px;
  text-align: center;
  font-size: 16pt;
  font-weight: bold;
  font-style: oblique;
  color: #078b00;
  font-family: 'Rowdies', cursive;
}

.navbar-brand {
  margin: 0;
  padding: 0;
  height: auto;
}

.navbar-brand img {
  height: 50px;
  margin: 0;
  padding: 0;
}

/* footer */

.footer-disclaimer {
  font-size: 8pt;
}

.page-fade-in {
  width: 100%;
  animation: fadeIn .5s;
}

@keyframes fadeIn {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

.show-consent-banner {
  border-top: solid black 2px;
  z-index: 2;
  position: fixed;
  bottom: 0;
  height: 200px;
  width: 100%;
  background-color: whitesmoke;
  text-align: center;
  color: black;
}

.hide-consent-banner {
  position: relative;
  display: none;
  overflow: hidden;
  visibility: hidden;
  height: 0;
}

